# python_test

./: CMakeLists.txt  install_all.bat  install_all.sh  install_libs.sh  install_pip.sh  pyproject.toml  setup.py  test.py
.github/workflows/: linux-cp35.yml  linux-cp37.yml  windows-py311.yml  windows-wheel.yml
examples/: pcplp_1.py  pcplp_2.py  rd_1.py  rd_2.py
lib/include/: aux_module.h  pcplp.h  rhythmic_delivery.h
lib/src/: aux_module.cpp  bindings.cpp  pcplp.cpp  rhythmic_delivery.cpp
pip_offline/: insall.sh
